--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Conflict and Ideology
+title: Ideology and Conflict
 subtitle: CCHU9026
 description: >- # this means to ignore newlines until "baseurl:"
   This is the demo site for our common core project
