--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   with a responsive site template Prologue.
 author: 
 email: "ideologyandconflict@gmail.com"
-avatar: assets/images/download(1).jpg
+avatar: assets/images/logo.png
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: "" # the subpath of your site, e.g. /blog
